<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="template_movie_title">Arrow</string>
    <string name="template_movie_release_date">April 27, 2018</string>
    <string name="template_movie_desc">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy…</string>
    <string name="line_separator">line separator</string>
    <string name="overview_text">Overview</string>
    <string name="star_icon_text_desc">star icon</string>
    <string name="background_desc">background</string>
    <string name="movie_poster_content_desc">movie poster</string>
    <string name="movie_tab_title">Movie</string>
    <string name="tv_show_tab_title">Tv Show</string>
    <string name="detail_film_title_text">Detail Film</string>
    <string name="template_genre_text">Action</string>
    <string name="template_genre_title_text">Genre</string>
    <string name="template_status_title_text">Status</string>
    <string name="template_status_text">Released</string>
    <string name="template_score_title_text">Score</string>
    <string name="template_runtime_title_text">Runtime</string>
    <string name="template_score_text">8.3</string>
    <string name="template_runtime_text">2h 29m</string>
    <string name="default_language">en-US</string>
    <string name="language_setting_text">Language Setting</string>
    <string name="template_episode_text">Tv Total : 22 Episodes</string>
    <string name="runtime_icon_text">runtime icon</string>
    <string name="bottom_margin_desc">bottom margin</string>
    <string name="reload_text">reload</string>
    <string name="placeholder_content_desc">placeholder</string>
    <string-array name="movie_title">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avenger: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon A Deadpool</item>
        <item>How To Train Your Dragon</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Siper-Man: Into The Spider-Verse</item>
        <item>The Girl In The Spider Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
    <string-array name="movie_release_date">
        <item>October 3, 2018</item>
        <item>December 7, 2018</item>
        <item>April 27, 2018</item>
        <item>December 13, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 21, 2018</item>
        <item>December 11, 2018</item>
        <item>February 22, 2019</item>
        <item>December 14, 2018</item>
        <item>January 16, 2019</item>
        <item>October 19, 2018</item>
        <item>December 13, 2018</item>
        <item>December 14, 2018</item>
        <item>January 17, 2019</item>
        <item>November 21, 2018</item>
        <item>December 14, 2018</item>
        <item>November 9, 2018</item>
        <item>December 14, 2018</item>
        <item>October 5, 2018</item>
    </string-array>
    <string-array name="movie_desc">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder &amp; zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called \'Broly\' who they\'ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what\'s this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war. </item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael\'s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>We don\'t have an overview translated in English. Help us expand our database by adding one.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he’s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="movie_genre">
        <item>Drama, Romance, Music</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Thriller, Drama</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Drama</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Fantasy, Adventure, Comedy, Science Fiction,</item>
        <item>Thriller, Mystery, Drama</item>
        <item>Action, Thriller</item>
        <item>Fantasy, Family, Comedy,</item>
        <item>Adventure, Fantasy</item>
        <item>Comedy, Drama</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy,</item>
        <item>Action, Crime, Thriller</item>
        <item>Crime, Drama, Thriller</item>
        <item>Science Fiction, Action</item>
    </string-array>
    <string-array name="movie_score">
        <item>7.5</item>
        <item>6.8</item>
        <item>8.3</item>
        <item>7.0</item>
        <item>8.1</item>
        <item>6.5</item>
        <item>6.7</item>
        <item>6.9</item>
        <item>7.6</item>
        <item>7.4</item>
        <item>6.5</item>
        <item>6.3</item>
        <item>6.6</item>
        <item>6.0</item>
        <item>6.6</item>
        <item>5.8</item>
        <item>8.4</item>
        <item>6.0</item>
        <item>6.5</item>
        <item>6.6</item>
    </string-array>
    <string-array name="movie_release_status">
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
    </string-array>
</resources>